--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <div class="row-span-5 flex flex-col justify-center items-center grid-cols-1">
             <form class="w-80 flex flex-col justify-center items-center border rounded-sm px-10 py-4 gap-5">
-                <img class="w-52" src="../img/insta-logo.png">
+                <img class="w-52" src="insta-logo.png">
 
                 <input class="bg-slate-50 h-9 w-full pl-3 border rounded-sm" placeholder="Número de Telefone, e-mail">
                 <input class="bg-slate-50 h-9 w-full pl-3 border rounded-sm" placeholder="Senha">
@@ -33,8 +33,8 @@
             <p class="flex gap-2 mt-2">Baixe o aplicativo.</p>
 
             <div class="flex gap-2 mt-4">
-                <img class="h-10" src="../img/apple.png">
-                <img class="h-10" src="../img/google.png">
+                <img class="h-10" src="apple.png">
+                <img class="h-10" src="google.png">
             </div>
 
         </div>
@@ -65,3 +65,4 @@
     </div>
 </body>
 </html>
+
