--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="h-lvh w-lvw grid grid-cols-1 md:grid-cols-2 grid-rows-6">
 
         <div class="row-span-5 md:flex justify-end hidden">
-            <img class="w-max-96" src="../img/insta-img.png">
+            <img class="w-max-96" src="insta-img.png">
         </div>
 
         <div class="row-span-5 flex flex-col justify-center items-center grid-cols-1">
@@ -65,4 +65,5 @@
     </div>
 </body>
 </html>
+
 
